[gd_scene load_steps=16 format=3 uid="uid://lekydeni4601"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_1f60j"]
[ext_resource type="Script" path="res://Characters/Players/States/Statemachine.gd" id="2_imo3g"]
[ext_resource type="Script" path="res://Scripts/PlayerCam.gd" id="2_t0sey"]
[ext_resource type="PackedScene" uid="uid://wlckncbkcvv5" path="res://Scenes/HealthComp.tscn" id="2_t40r2"]
[ext_resource type="Script" path="res://Characters/Players/States/Idle.gd" id="3_gmlyl"]
[ext_resource type="PackedScene" uid="uid://ca6pud6dop0oe" path="res://Scenes/HitboxComp.tscn" id="3_o3jnj"]
[ext_resource type="Script" path="res://Characters/Players/States/Walk.gd" id="4_7gqas"]
[ext_resource type="Script" path="res://Characters/Players/States/Jump.gd" id="5_icivo"]
[ext_resource type="Script" path="res://Characters/Players/States/Fall.gd" id="6_dhljp"]
[ext_resource type="Script" path="res://Characters/Players/States/Sprint.gd" id="7_splrs"]
[ext_resource type="Script" path="res://Characters/Players/Actions/ActionManager.gd" id="11_2rbkx"]
[ext_resource type="Script" path="res://Characters/Players/Actions/Action.gd" id="12_fsnr1"]
[ext_resource type="Script" path="res://Characters/Players/Actions/WeaponFire.gd" id="13_pu4fu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x0qk0"]
radius = 5.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i0obu"]
radius = 6.0
height = 24.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("initialState")]
collision_layer = 5
script = ExtResource("1_1f60j")
initialState = NodePath("Statemachine/Idle")

[node name="HealthComp" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("2_t40r2")]
entity = NodePath("..")

[node name="HitboxComp" parent="." instance=ExtResource("3_o3jnj")]
collision_layer = 2049
collision_mask = 2049

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComp"]
shape = SubResource("CapsuleShape2D_x0qk0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_i0obu")

[node name="PlayerCam" type="Camera2D" parent="." node_paths=PackedStringArray("player")]
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 7.5
script = ExtResource("2_t0sey")
player = NodePath("..")

[node name="Statemachine" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("2_imo3g")
player = NodePath("..")

[node name="Idle" type="Node" parent="Statemachine" node_paths=PackedStringArray("player")]
script = ExtResource("3_gmlyl")
player = NodePath("../..")

[node name="Walk" type="Node" parent="Statemachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_7gqas")
player = NodePath("../..")

[node name="Sprint" type="Node" parent="Statemachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_splrs")
player = NodePath("../..")

[node name="Jump" type="Node" parent="Statemachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_icivo")
player = NodePath("../..")

[node name="Fall" type="Node" parent="Statemachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_dhljp")
player = NodePath("../..")

[node name="Actionsmanager" type="Node" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("11_2rbkx")
entity = NodePath("..")

[node name="Node" type="Node" parent="Actionsmanager"]
script = ExtResource("12_fsnr1")

[node name="WeaponFire" type="Node" parent="Actionsmanager"]
script = ExtResource("13_pu4fu")

[connection signal="area_shape_entered" from="HitboxComp" to="PlayerCam" method="_on_hitbox_comp_area_shape_entered"]
[connection signal="area_shape_exited" from="HitboxComp" to="PlayerCam" method="_on_hitbox_comp_area_shape_exited"]
